--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>FinanceManager</title>
-    {% comment %} <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"> {% endcomment %}
+    <title>  {% if title %} Currency Exchange- {% endif%} FinanceManager</title>
+  
+
     <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/2344/2344132.png">
     <script src="https://code.jquery.com/jquery-3.6.4.min.js" ></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    
 
     <link href="https://getbootstrap.com/docs/5.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
@@ -19,183 +18,260 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&display=swap" rel="stylesheet">
 <style>
-   @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,300&display=swap');
-   *{font-family: 'Roboto', sans-serif;};
-body {
-   font-size: .875rem;
-   /* font-family: 'Poppins', sans-serif; */
-   font-family: var(--bs-font-sans-serif);
- }
- 
- .feather {
-   width: 16px;
-   height: 16px;
-   vertical-align: text-bottom;
- }
- 
- /*
-  * Sidebar
-  */
- 
- .sidebar {
-   position: fixed;
-   top: 0;
-   /* rtl:raw:
-   right: 0;
-   */
-   bottom: 0;
-   /* rtl:remove */
-   left: 0;
-   z-index: 100; /* Behind the navbar */
-   padding: 48px 0 0; /* Height of navbar */
-   box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
- }
- 
- @media (max-width: 767.98px) {
-   .sidebar {
-     top: 5rem;
-   }
- }
- 
- .sidebar-sticky {
-   position: relative;
-   top: 0;
-   height: calc(100vh - 48px);
-   padding-top: .5rem;
-   overflow-x: hidden;
-   overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
- }
- 
- .sidebar .nav-link {
-   font-weight: 500;
-   color: #333;
- }
- 
- .sidebar .nav-link .feather {
-   margin-right: 4px;
-   color: #727272;
- }
- 
- .sidebar .nav-link.active {
-   color: #2470dc;
- }
- 
- .sidebar .nav-link:hover .feather,
- .sidebar .nav-link.active .feather {
-   color: inherit;
- }
- 
- .sidebar-heading {
-   font-size: .75rem;
-   text-transform: uppercase;
- }
- 
- /*
-  * Navbar
-  */
- 
- .navbar-brand {
-   padding-top: .75rem;
-   padding-bottom: .75rem;
-   font-size: 1rem;
-   background-color: rgba(0, 0, 0, .25);
-   box-shadow: inset -1px 0 0 rgba(0, 0, 0, .25);
- }
- 
- .navbar .navbar-toggler {
-   top: .25rem;
-   right: 1rem;
- }
- 
- .navbar .form-control {
-   padding: .75rem 1rem;
-   border-width: 0;
-   border-radius: 0;
- }
- 
- .form-control-dark {
-   color: #fff;
-   background-color: rgba(255, 255, 255, .1);
-   border-color: rgba(255, 255, 255, .1);
- }
- 
- .form-control-dark:focus {
-   border-color: transparent;
-   box-shadow: 0 0 0 3px rgba(255, 255, 255, .25);
- }
- .bd-placeholder-img {
-   font-size: 1.125rem;
-   text-anchor: middle;
-   -webkit-user-select: none;
-   -moz-user-select: none;
-   user-select: none;
- }
-
- @media (min-width: 768px) {
-   .bd-placeholder-img-lg {
-     font-size: 3.5rem;
-   }
- }
-
- 
+  @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,300&display=swap");
+  * {
+    font-family: "Roboto", sans-serif;
+  }
+  body {
+    font-size: 0.875rem;
+    /* font-family: 'Poppins', sans-serif; */
+    font-family: var(--bs-font-sans-serif);
+  }
+  
+  .feather {
+    width: 16px;
+    height: 16px;
+    vertical-align: text-bottom;
+  }
+  
+  /*
+    * Sidebar
+    */
+  
+  .sidebar {
+    position: fixed;
+    top: 0;
+    /* rtl:raw:
+     right: 0;
+     */
+    bottom: 0;
+    /* rtl:remove */
+    left: 0;
+    z-index: 100; /* Behind the navbar */
+    padding: 48px 0 0; /* Height of navbar */
+    box-shadow: inset -1px 0 0 rgba(0, 0, 0, 0.1);
+  }
+  
+  @media (max-width: 767.98px) {
+    .sidebar {
+      top: 5rem;
+    }
+  }
+  
+  .sidebar-sticky {
+    position: relative;
+    top: 0;
+    height: calc(100vh - 48px);
+    padding-top: 0.5rem;
+    overflow-x: hidden;
+    overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
+  }
+  
+  .sidebar .nav-link {
+    font-weight: 500;
+    color: #333;
+  }
+  
+  .sidebar .nav-link .feather {
+    margin-right: 4px;
+    color: #727272;
+  }
+  
+  .sidebar .nav-link.active {
+    color: #2470dc;
+  }
+  
+  .sidebar .nav-link:hover .feather,
+  .sidebar .nav-link.active .feather {
+    color: inherit;
+  }
+  
+  .sidebar-heading {
+    font-size: 0.75rem;
+    text-transform: uppercase;
+  }
+  
+  /*
+    * Navbar
+    */
+  
+  .navbar-brand {
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
+    font-size: 1rem;
+    background-color: rgba(0, 0, 0, 0.25);
+    box-shadow: inset -1px 0 0 rgba(0, 0, 0, 0.25);
+  }
+  
+  .navbar .navbar-toggler {
+    top: 0.25rem;
+    right: 1rem;
+  }
+  
+  .navbar .form-control {
+    padding: 0.75rem 1rem;
+    border-width: 0;
+    border-radius: 0;
+  }
+  
+  .form-control-dark {
+    color: #fff;
+    background-color: rgba(255, 255, 255, 0.1);
+    border-color: rgba(255, 255, 255, 0.1);
+  }
+  
+  .form-control-dark:focus {
+    border-color: transparent;
+    box-shadow: 0 0 0 3px rgba(255, 255, 255, 0.25);
+  }
+  .bd-placeholder-img {
+    font-size: 1.125rem;
+    text-anchor: middle;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    user-select: none;
+  }
+  
+  @media (min-width: 768px) {
+    .bd-placeholder-img-lg {
+      font-size: 3.5rem;
+    }
+  }
+  
+  #preloader {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-color: #fff;
+    z-index: 9999;
+  }
+  
+  #loader {
+    display: block;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    border: 8px solid #ccc;
+    border-top-color: #fbb72c;
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
+    margin: -30px 0 0 -30px;
+    animation: spin 0.6s linear infinite;
+  }
+  
+  @keyframes spin {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+  
+  .nav-link.active {
+    color: #08a6c3;
+  }
+  
 </style>
-
     {% block head%}{% endblock%}
   </head> 
   <body>
+    <div id="preloader">
+      <div id="loader"></div>
+    </div>
+    
  
-    <header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
-      <p class="navbar-brand col-md-3 col-lg-2 me-0 px-3">
-        <img  class="dropdown-toggle"  data-toggle="dropdown"
-           src="https://api.dicebear.com/5.x/fun-emoji/svg?seed={{ user.get_username }}" 
-            class="rounded-circle" height="30" alt="profile pic" loading="lazy"  /> Hellow, {{ user.get_username }}
-     </p>
+    <header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow navbar-expand-md">
+      <h3 class="navbar-brand col-md-3 col-lg-2 me-0 px-3 h2 h-100" style="background-color:rgb(33,37,41);" >
+        <i class="bi bi-currency-dollar h3"></i> <span  id="balance-re" class="h2"></span>
+      </h3>
+   
       <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-bs-toggle="collapse"
            data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
            <span class="navbar-toggler-icon"></span>
         </button>
-        <input class="form-control form-control-dark w-100" type="text" id="filter-input" placeholder="Search by name" aria-label="Search">
+        
+        {% if request.path in '/' %} 
+        <input type="text" id="filter-input"style="background-color:rgb(33,37,41);" placeholder="Search by name" aria-label="Search"
+        class="form-control text-white form-control-dark w-100"> {% endif %}
         <div class="navbar-nav">
-           <div class="nav-item text-nowrap">
-              <a class="nav-link btn px-3" id="signout_btn" href="{% url 'logout'%}">Sign out</a>
+           <div class="nav-item" id="lgbtn">
            </div>
         </div>
      </header>
   
      <div class="container-fluid">
+      <div class="modal fade" id="logoutModal" tabindex="-1" aria-labelledby="logoutModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="logoutModalLabel">Logout Confirmation</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              Are you sure you want to logout?
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+              <a href="/logout/" class="btn btn-danger">Logout</a>
+            </div>
+          </div>
+        </div>
+      </div>
         <div class="row">
            <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
-              <div class="position-sticky pt-3">
-                 <!-- nav links options -->
-                 <ul class="nav flex-column">
-                    <li class="nav-item">
-                       <a href="#tranadd" class="nav-link active  h5" id="dashboard_loader" aria-current="page" >
-                                           <i class="fa fa-home" aria-hidden="true"></i>
+              <div class="position-sticky pt-3 mt-1">
+               <div class="text-center mt-2">
+              
+                {% now "s" as current_second %}
+                {% if current_second|divisibleby:2 %}
+                     <img src="https://api.dicebear.com/5.x/thumbs/svg?seed={{ user.get_full_name }}"  alt="{{ user.get_full_name }} avatar"  
+                     loading="lazy" class="img-fluid rounded w-25"
+                       style="height:auto; border-radius:50px;" />
+                {% else %}
+                  <img src="https://api.dicebear.com/5.x/avataaars/svg?seed={{ user.get_full_name }}" alt="{{ user.get_full_name }} avatar"  loading="lazy"
+                  style="height:auto; border-radius:50px;" class="img-fluid rounded w-25">
+                {% endif %}
+
+
+                <p class="h3" style="font-family: 'Open Sans', sans-serif;">{{ user.get_full_name|capfirst }}</p>
+
+               </div>
+                <ul class="nav flex-column">
+                  <li class="nav-item">
+                       <a href="{% url 'home' %}"
+                        class="nav-link {% if request.path == '/' %} active {% endif %}  h5" ><i class="fa fa-home" aria-hidden="true"></i>
                           Transactions
                        </a>
                     </li>
            
                     <li class="nav-item">
-                       <a class="nav-link h5" aria-current="page" href="#analysis-div"  >
+                       <a class="nav-link {% if request.path == '/graph/' %} active {% endif %}  h5" href="{% url 'graph' %}"  >
                           <i class="bi bi-bar-chart-line"></i>
                           Analytics
                        </a>
                     </li>
-  
-                 </ul>
-       
+                    <li class="nav-item">
+                      <a class="nav-link {% if request.path == '/currency/' %} active {% endif %} h5" href="{% url 'currency_exchange' %}"  >
+                         <i class="bi bi-cash"></i> Convert Currency </a>
+                   </li>
+                   <li class="nav-item" id="mbl-lgbtn">
+                  </li>
+                
+                </ul>
+                
               </div>
            </nav>
-           <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4 ml-5">
+           <main class="col-md-9 ms-sm-auto col-lg-10  px-md-4 ms-5">
                 {% block content %}{% endblock %}
 
-
-                <footer class="d-flex flex-wrap justify-content-between text-center align-items-center py-3 my-4 border-top">
-                  <p class="col-md-4 mb-0 text-muted">© 2022 FinanceManager</p>
-                </footer>
-
-
+              <hr>
+                  <p class="text-center mt-5 h5">© 2022 FinanceManager</p>
 
            </main>
         </div>
@@ -204,5 +280,43 @@ body {
 
 
     <script src="https://getbootstrap.com/docs/5.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+      $(window).on('load', function() {
+        $('#preloader').fadeOut('slow', function() {
+          $(this).remove();
+          
+        });
+        const viewportWidth = $(window).width();
+        if (viewportWidth > 992) { 
+          $("#lgbtn").html(`
+          <a style="background-color:rgb(33,37,41);" 
+          class="nav-link btn text-white" 
+          id="signout_btn" 
+          data-bs-toggle="modal" data-bs-target="#logoutModal""
+          >Logout
+          <i class="bi bi-box-arrow-right"></i></a>`);
+    
+        }else{
+        $("#mbl-lgbtn").html(`<a class="nav-link h5 float-right" data-bs-toggle="modal" data-bs-target="#logoutModal"><i class="bi bi-box-arrow-right"></i>Logout </a>`);
+        }
+      });
+      
+      function load_balance() {
+        $.ajax({
+          url: "{% url 'balance' %}",
+          type: "GET",
+          success: function (data) {
+            if (data.balance == 0){
+              $("#balance-re").html("0.00");
+            }else{
+              $("#balance-re").html(data.balance);
+            }
+          }
+        });
+      };
+      load_balance();
+    </script>
+    
+  
   </body>
   </html>
