--- a/app/templates/transaction_form_modal.html
+++ b/app/templates/transaction_form_modal.html
@@ -8,9 +8,11 @@
     <title>Add a Transaction</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+
 <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/2344/2344132.png">
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
@@ -19,6 +21,7 @@
 
   <div class="container">
   <h5 class="modal-title h1">Add Transaction</h5>
+  <p class="text-mute">Balance: <span id="balance-re"></span></p>
 <hr>
       <form method="post" id="addtran">
        {% csrf_token %} 
@@ -31,34 +34,73 @@
   </div>
 
 <script defer>
+
+ 
+  var div = $('#div_id_category').children('div');
+  div.addClass('input-group');
+  $("#id_category").addClass("form-select");
+  $('#div_id_category select').after(`<a  id="cat_add" class=' btn input-group-text'><i class="bi bi-plus-lg"></i></a>`);
+
   $(document).ready(function() {
+    
+    $('#cat_add').on('click', function(e) {
+      var popup = window.open("{% url 'transaction_type_create' %}", '_blank', 'width=auto,height=500px');
+      var intervalId = setInterval(function() {
+        if (popup.closed) {
+          location.reload();
+          clearInterval(intervalId);
+        };
+      }, 500);
+    });
+    
+
+    function load_balance() {
+      $.ajax({
+        url: "{% url 'balance' %}",
+        type: "GET",
+        success: function (data) {
+          if (data.balance == 0){
+            $("#balance-re").html("0.00");
+          }else{
+            $("#balance-re").html(data.balance);
+          }
+        }
+      });
+    };
+    load_balance();
     $("#addtran").submit(function(e) {
       e.preventDefault();
       if (validateForm()) {
         $.ajax({
-          url: "/create/",
+          url: "{% url 'transaction_create' %}",
           type: "POST",
           dataType: "json",
           data: $("#addtran").serialize(),
           success: function(data) {
-             Swal.fire('Congrats', 'Added Successfully','success');
-             setTimeout(function() { window.close();}, 2000);
+            if (data.success) {
+              Swal.fire('Congrats', 'Added Successfully', 'success');
+              setTimeout(function() { window.close(); }, 2000);
+              
+            } else {
+              Swal.fire({
+                icon: 'error',
+                title: 'Oops...',
+                text: 'Error adding transaction. Please check the form and try again.',
+              });
+            }
           },
-          error: function(data) {
+          error: function(xhr, data, error) {
             Swal.fire({
               icon: 'error',
               title: 'Oops...',
-              text: 'Something went wrong!',
+              text: 'Error adding transaction. Please check the form and try again.',
             });
-            setTimeout(function() { window.close();}, 2000);
-
-            
-
           }
         });
       }
     });
   });
+  
   
   function validateForm() {
     var isValid = true;
