--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Login</title>
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/2344/2344132.png">
     <style>
@@ -71,21 +71,58 @@ body {
 
 <form method="post" class="form-signin" action="{% url 'login' %}">
 {% csrf_token %}
-<h1 class="h3 mb-3 font-weight-normal text-center">Sign in</h1>
+<h1 class="h3  text-center"><i class="bi bi-wallet2"></i></h1>
+<h2 class="h3 font-weight-normal text-center">Sign in</h2>
  
-<input type="text" name="username" class="form-control"  id="id_username" placeholder="Email username/email" required="" autocomplete="username" maxlength="150"  autofocus="">
+<label for="id_username" class="sr-only">{{ form.username.label }}</label>
+<input type="text" name="username" class="form-control"  id="id_username" 
+placeholder="Email username/email" required="" autocomplete="username" maxlength="150"  autofocus="">
+
   <label for="inputPassword" class="sr-only">{{ form.password.label }}</label>
-  <input type="password" name="password" autocomplete="current-password" placeholder="Enter password" class="form-control mt-2" required="" id="id_password">
+  <input type="password" name="password" 
+  autocomplete="current-password" 
+  placeholder="Enter password"
+   class="form-control mt-2" required="" id="id_password">
+ {% if form.captcha %}
+ <script>alert("hello");</script>
+  <div class="input-group mb-3">
+    {{ form.captcha }}
+  </div>
 
-  <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+  {% endif %}
+
+  <button class="btn btn-lg btn-primary btn-block mt-1" type="submit">Sign in</button>
   {% if form.errors %}
-  <p class="py-1 text-danger">Your username and password didn't match. Please try again.</p>
-
-{% endif %}
+    <p class="py-1 text-danger">{{ error }}</p>
+  {% endif %}
+<p class="py-1" >New user ? <a href="{% url 'register' %}">Register</a></p>
 </form>
 
 
+
 </div>
+{% if form.captcha %}
+<script>
+  
+    const inputs = document.querySelectorAll('input');
+    for (let i = inputs.length - 1; i >= 0; i--) {
+      if (inputs[i].type === 'text') {
+        inputs[i].classList.add('form-control');
+        inputs[i].classList.add('w-50');
+
+
+        inputs[i].classList.add('mt-1');
+
+        inputs[i].placeholder = 'Enter Captcha';
+        break;
+      }
+    }
+      const captchaImg = document.querySelector('.captcha');
+    captchaImg.classList.add(`w-50`);
+    captchaImg.classList.add(`h-25`);
+</script>
+{% endif %}
+
 {% endblock %}
 
 
